# svd-ublas

./: CMakeLists.txt  README  common.hpp  eigen.cpp  main.cpp  svd.cpp
data/: pysvd.example  qr.example  wiki.example  wiki.qr.example
